# fyle

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: _common.py  read_any.py  read_archive.py  read_audio.py  read_csv.py  read_docx.py  read_html.py  read_image.py  read_md.py  read_pdf.py  read_pptx.py  read_sqlite.py  read_text.py  read_video.py  read_xlsx.py
src/fyle/: __init__.py  errors.py  sqlite.py
src/fyle/_core/: __init__.py  api.py  chunking.py  document.py  fetcher.py  registry.py  sniffer.py
src/fyle/_readers/: __init__.py  _md_structure.py  _whisper.py  base.py
src/fyle/_readers/archive/: __init__.py  stdlib.py
src/fyle/_readers/audio/: __init__.py  faster_whisper.py
src/fyle/_readers/csv/: __init__.py  stdlib.py
src/fyle/_readers/docx/: __init__.py  mammoth.py
src/fyle/_readers/html/: __init__.py  markdownify.py
src/fyle/_readers/image/: __init__.py  stdlib.py
src/fyle/_readers/markdown/: __init__.py  stdlib.py
src/fyle/_readers/pdf/: __init__.py  pymupdf4llm.py
src/fyle/_readers/pptx/: __init__.py  python_pptx.py
src/fyle/_readers/sqlite/: __init__.py  stdlib.py
src/fyle/_readers/text/: __init__.py  stdlib.py
src/fyle/_readers/video/: __init__.py  scenedetect.py
src/fyle/_readers/xlsx/: __init__.py  openpyxl.py
