[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fylepy"
version = "0.1.0"
description = "Open anything, get clean Markdown for LLMs."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "zhixiangxue" }]
keywords = ["llm", "markdown", "pdf", "document", "parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pymupdf>=1.24",
    "pymupdf4llm>=0.0.17",
    "pdfplumber>=0.11",
    "pypdf>=4",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "markdown-it-py>=3",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "Pillow>=10",
    "tiktoken>=0.7",
    "python-magic>=0.4",
    "httpx>=0.27",
    "pydantic>=2",
    # Mature libs for Markdown-side work. Rule: fyle never hand-assembles
    # Markdown strings 〔 tables go through ``tabulate``, HTML conversion
    # through ``markdownify``, and DOCX conversion through ``mammoth``.
    "tabulate>=0.9",
    "markdownify>=0.11",
    "mammoth>=1.8",
]

[project.optional-dependencies]
# Audio / video transcription + scene detection 〔 opt-in extras.
#
# Rule (design doc): fyle's hard dependencies stay lightweight. The
# transcription stack pulls in ~90 MB of native wheels (CTranslate2,
# PyAV, onnxruntime) and 〔 on first run 〔 a ~140 MB Whisper model. That
# is too much to impose on users who only read PDFs or Excel files, so
# it ships behind ``pip install fyle[audio]`` / ``pip install fyle[video]``.
#
# Scope:
#   * ``audio``: transcribe mp3 / m4a / wav / flac to time-stamped
#     Markdown via ``faster-whisper`` (CPU / int8).
#   * ``video``: ``audio`` stack + ``scenedetect[pyav]`` for keyframes
#     and ``av`` for frame-accurate seeking.
#
# The reader modules themselves always register regardless 〔 lazy
# imports inside ``read()`` raise a clear install-this-extra message if
# the deps are missing. That way ``fyle.readers()`` is honest about the
# full roadmap even in a minimal install.
audio = ["faster-whisper>=1.0"]
video = [
    "faster-whisper>=1.0",
    "scenedetect[pyav]>=0.6",
    "av>=12",
]
av = [
    "faster-whisper>=1.0",
    "scenedetect[pyav]>=0.6",
    "av>=12",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/zhixiangxue/fyle"
Design = "https://github.com/zhixiangxue/fyle/blob/main/design/02-fyle-sdk-design.md"

[tool.hatch.build.targets.wheel]
packages = ["src/fyle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fyle",
    "README.md",
    "DESIGN.md",
    "LICENSE",
    "design",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
